# codeforces_cpp_solution

./: CMakeLists.txt  README.md  test.py
contest/cf_971_div4/A/: A.cpp
contest/cf_971_div4/B/: B.cpp
contest/cf_971_div4/C/: C.cpp
contest/cf_971_div4/D/: D.cpp
contest/cf_971_div4/D/test/: 1.in  2.in  2.out  3.in  4.in
contest/cf_971_div4/E/: E.cpp
contest/cf_971_div4/E/test/: 1.in  1.out  3.in
contest/cf_971_div4/F/: F.cpp
contest/cf_972_div2/A/: A.cpp
contest/cf_972_div2/B_hard/: B_hard.cpp
contest/cf_972_div2/B_hard/test/: 2.in
contest/cf_972_div2/B_simple/: B_simple.cpp
contest/cf_972_div2/B_simple/test/: 1.in
contest/cf_972_div2/C/: C.cpp  review.md
contest/cf_972_div2/C/test/: 1.in  1.out
problem_set/4A_800/: 4A.cpp
projects/test/src/: test.cpp
template/: template.cpp
